# bbs-server-socket

./: .env  .gitignore  README.md  bbs_client.py  bbs_cmd_parser.py  bbs_controller.py  bbs_db.py  bbs_db_schema.py  bbs_server.py  constant.py  pyproject.toml
1082-NPeasy/Lab1/: .env  bbs_db.py  bbs_server.py  docker-compose.yml
1082-NPeasy/Lab1/db/: users.py
db/: boards.py  mails.py  posts.py  users.py
demo/lab4/answer/t3/: user0  user2  user3
lab/: DBAPI.ipynb  Untitled.ipynb  clear_table.ipynb  controller.ipynb  db.ipynb  kafka-consumer.py  kafka-producer.ipynb  lab2_test.ipynb
test/: test_cmd_parser.py
